--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -31,6 +31,13 @@
     "ds = xr.open_mfdataset(\n",
     "    file_dir+\"wrfout_d04_*\",  preprocess=_preprocess\n",
     ")  \n",
+    "ds = ds.assign_coords(south_north=ds.XLAT.isel(Time=0, west_east=0).values)\n",
+    "ds = ds.assign_coords(west_east=ds.XLONG.isel(Time=0, south_north=0).values)\n",
+    "ds = ds.drop_vars(['XLAT', 'XLONG'])\n",
+    "ds = ds.rename({'south_north': 'latitude', 'west_east': 'longitude',\"Time\":\"time\"})\n",
+    "ds\n",
+    "\n",
+    "\n",
     "ds.to_netcdf(save_dir+\"d04_batch.nc\")"
    ]
   }
@@ -51,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
